// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package flex;

option go_package = "github.com/nya3jp/flex/internal/flex";

import "google/protobuf/duration.proto";

service Flexlet {
  rpc RunTask(RunTaskRequest) returns (RunTaskResponse) {}
}

message RunTaskRequest {
  Task task = 1;
}

message Task {
  TaskCommand command = 1;
  TaskOutput output = 2;
  repeated TaskPackage packages = 3;
  TaskLimits limits = 4;
}

message TaskCommand {
  string shell = 1;
}

message TaskOutput {
  string url = 1;
}

message TaskPackage {
  string url = 1;
  string install_path = 2;
}

message TaskLimits {
  google.protobuf.Duration time = 1;
}

message RunTaskResponse {
  TaskResult result = 1;
}

message TaskResult {
  oneof status {
    int32 exit_code = 1;
    string error = 2;
  }
  google.protobuf.Duration time = 3;
}
