// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package flex;

option go_package = "github.com/nya3jp/flex/internal/flexletpb";

import "flex.proto";

message Task {
  TaskRef ref = 1;
  TaskSpec spec = 2;
}

message TaskRef {
  string task_id = 1;
  int64 job_id = 2;
}

message TaskSpec {
  JobCommand command = 1;
  TaskInputs inputs = 2;
  TaskOutputs outputs = 3;
  JobLimits limits = 4;
}

message TaskInputs {
  repeated TaskPackage packages = 1;
}

message TaskPackage {
  FileLocation location = 1;
  string install_dir = 2;
}

message TaskOutputs {
  FileLocation stdout = 1;
  FileLocation stderr = 2;
}
